--- a/index.html
+++ b/index.html
@@ -1,54 +1,96 @@
----
-title: RAPIDCLOUD.IO  Documentation
-layout: post
----
-# RAPIDCLOUD.IO  Documentation
-## Overview
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Documentation by rapidcloudio-docs</title>
 
-Rapidcloud.io provides Java developers with turnkey application delivery services to the cloud. 
-
-### Initial Setup
-Use rapidcloud by providing access keys to your AWS, Digital Ocean or Rackspace account and authorizing rapidcloud to read your Github or Bitbucket repositories. Once connected you can use rapidcloud to provision and configure Java webapplication servers in any connected cloud.
-
-### Source Code
-Once the server is setup, use rapidcloud to clone your application respository (from bitbucket or github) onto your cloud server. Rapidcloud does not keep a copy of your source code on its servers. 
-
-### Compile and Package
-When your are ready to build and deploy your application rapidcloud will connect to your server and execute the build commands.
-
-#### Play
-For play projects, it will default to sbt clean compile stage -Dsbt.log.noformat=true (the noformat prevents the control characters from outputting and making the logs hard to read)
-
-You can override these settings on your server's configuration page, you are responsible for making sure your application is packaged to deploy in the  target/universal/stage/ folder after execution
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Documentation</h1>
+        <p>Overview</p>
 
 
-#### Maven/War Projects
-For maven projects, it will default to mvn clean package. 
+        <p class="view"><a href="https://github.com/rapidcloudio-docs">View My GitHub Profile</a></p>
 
-You can override these settings on your server's configuration page, you are responsible to making sure a .war file is packaged in the projects target/ folder after execution.
+      </header>
+      <section>
+        <h1>
+<a name="rapidcloudio--documentation" class="anchor" href="#rapidcloudio--documentation"><span class="octicon octicon-link"></span></a>RAPIDCLOUD.IO  Documentation</h1>
 
+<h2>
+<a name="overview" class="anchor" href="#overview"><span class="octicon octicon-link"></span></a>Overview</h2>
 
-### Deploy
-Once packaged, rapidcloud will attempt to deploy the projects
+<p>Rapidcloud.io provides Java developers with turnkey application delivery services to the cloud. </p>
 
-Rapidcloud offers two deployment strategies. Parallel deployment and traditional deployment. With parallel deployment enabled rapidcloud will alternate between two ports 8080/8081 for Maven/Tomcat projects and 9000/9001 for Play projects. 
+<h3>
+<a name="initial-setup" class="anchor" href="#initial-setup"><span class="octicon octicon-link"></span></a>Initial Setup</h3>
 
-The deployment lifecycle works as follows
+<p>Use rapidcloud by providing access keys to your AWS, Digital Ocean or Rackspace account and authorizing rapidcloud to read your Github or Bitbucket repositories. Once connected you can use rapidcloud to provision and configure Java webapplication servers in any connected cloud.</p>
 
-1. Start the application on the alternate instance (non active port)
-2. Wait for the application start time to complete (adjust the time on the server configuration page)
-3. Verify the application via http at the confirmation url (specified on the server configuration page). If the verifiation url fails to return a 200 status code, stop execution and mark the deployment as failed.
-4. Signal Nginx to send all new requests to the new application instance
-5. Wait 1 minute for existing requests on the old instance to cooldown
-6. Shutdown the old instance
+<h3>
+<a name="source-code" class="anchor" href="#source-code"><span class="octicon octicon-link"></span></a>Source Code</h3>
 
-#### Play
-For play projects rapidcloud will copy the files in target/universal/stage/ to /opt/play/(8000|8001)/ and execute the cmd in /opt/play/(8000|8001)/bin to start the application. Command line arguments can be provided on the server configuration page. 
+<p>Once the server is setup, use rapidcloud to clone your application respository (from bitbucket or github) onto your cloud server. Rapidcloud does not keep a copy of your source code on its servers. </p>
 
-#### Tomcat
-For play projects rapidcloud will copy the war file in target/ to /opt/tomcat/instances/(8080|8081)/webapps/ and start tomcat
+<h3>
+<a name="compile-and-package" class="anchor" href="#compile-and-package"><span class="octicon octicon-link"></span></a>Compile and Package</h3>
 
+<p>When your are ready to build and deploy your application rapidcloud will connect to your server and execute the build commands.</p>
 
+<h4>
+<a name="play" class="anchor" href="#play"><span class="octicon octicon-link"></span></a>Play</h4>
 
+<p>For play projects, it will default to sbt clean compile stage -Dsbt.log.noformat=true (the noformat prevents the control characters from outputting and making the logs hard to read)</p>
 
+<p>You can override these settings on your server's configuration page, you are responsible for making sure your application is packaged to deploy in the  target/universal/stage/ folder after execution</p>
 
+<h4>
+<a name="mavenwar-projects" class="anchor" href="#mavenwar-projects"><span class="octicon octicon-link"></span></a>Maven/War Projects</h4>
+
+<p>For maven projects, it will default to mvn clean package. </p>
+
+<p>You can override these settings on your server's configuration page, you are responsible to making sure a .war file is packaged in the projects target/ folder after execution.</p>
+
+<h3>
+<a name="deploy" class="anchor" href="#deploy"><span class="octicon octicon-link"></span></a>Deploy</h3>
+
+<p>Once packaged, rapidcloud will attempt to deploy the projects</p>
+
+<p>Rapidcloud offers two deployment strategies. Parallel deployment and traditional deployment. With parallel deployment enabled rapidcloud will alternate between two ports 8080/8081 for Maven/Tomcat projects and 9000/9001 for Play projects. </p>
+
+<p>The deployment lifecycle works as follows</p>
+
+<ol>
+<li>Start the application on the alternate instance (non active port)</li>
+<li>Wait for the application start time to complete (adjust the time on the server configuration page)</li>
+<li>Verify the application via http at the confirmation url (specified on the server configuration page). If the verifiation url fails to return a 200 status code, stop execution and mark the deployment as failed.</li>
+<li>Signal Nginx to send all new requests to the new application instance</li>
+<li>Wait 1 minute for existing requests on the old instance to cooldown</li>
+<li>Shutdown the old instance</li>
+</ol><h4>
+<a name="play-1" class="anchor" href="#play-1"><span class="octicon octicon-link"></span></a>Play</h4>
+
+<p>For play projects rapidcloud will copy the files in target/universal/stage/ to /opt/play/(8000|8001)/ and execute the cmd in /opt/play/(8000|8001)/bin to start the application. Command line arguments can be provided on the server configuration page. </p>
+
+<h4>
+<a name="tomcat" class="anchor" href="#tomcat"><span class="octicon octicon-link"></span></a>Tomcat</h4>
+
+<p>For play projects rapidcloud will copy the war file in target/ to /opt/tomcat/instances/(8080|8081)/webapps/ and start tomcat</p>
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+    
+  </body>
+</html>
