Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Documentation by rapidcloudio-docs</title>
+    <meta name="description" content="Documentation : Overview">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Documentation</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Documentation</h1>
-        <p>Overview</p>
 
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/rapidcloudio-docs">View on GitHub</a>
 
-        <p class="view"><a href="https://github.com/rapidcloudio-docs">View My GitHub Profile</a></p>
+          <h1 id="project_title">Documentation</h1>
+          <h2 id="project_tagline">Overview</h2>
 
-      </header>
-      <section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="rapidcloudio--documentation" class="anchor" href="#rapidcloudio--documentation"><span class="octicon octicon-link"></span></a>RAPIDCLOUD.IO  Documentation</h1>
 
@@ -86,11 +90,16 @@
 
 <p>For play projects rapidcloud will copy the war file in target/ to /opt/tomcat/instances/(8080|8081)/webapps/ and start tomcat</p>
       </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
