--- a/index.html
+++ b/index.html
@@ -16,14 +16,12 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/rapidcloudio-docs">View on GitHub</a>
-
           <h1 id="project_title">Documentation</h1>
-          <h2 id="project_tagline">Overview</h2>
-
+          <h2 id="project_tagline"><a href="/">Overview</a></h2>
+		  <h2 id="project_tagline"><a href="/network.html">Networking</a></h2>
         </header>
     </div>
-
+	
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
