working on page 2

--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <h1 id="project_title">Documentation</h1>
-          <h2 id="project_tagline"><a href="/">Overview</a></h2>
-		  <h2 id="project_tagline"><a href="/network.html">Networking</a></h2>
+          <h2 id="project_tagline">Overview</h2>
         </header>
     </div>
 	
+	<nav>
+		<a href="/">Overview</a>
+		<a href="/network.html">Networks</a>
+	</nav>
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
