--- a/network.html
+++ b/network.html
@@ -17,8 +17,7 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <h1 id="project_title">Documentation</h1>
-          <h2 id="project_tagline"><a href="/">Overview</a></h2>
-		  <h2 id="project_tagline"><a href="/network.html">Networking</a></h2>
+          <h2 id="project_tagline">Networks</h2>
         </header>
     </div>
 
