--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
 
-	<nav>
+	<nav class="inner">
 		<a href="/">Overview</a>
 		<a href="/network.html">Networks</a>
 	</nav>
