added content to network table, need to change this to jekyll when i have some time

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     <div id="main_content_wrap" class="outer">
 
 	<nav class="inner">
-		<a href="/">Overview</a>
+		<a href="/">Overview</a> | 
 		<a href="/network.html">Networks</a>
 	</nav>
+	
 	<section id="main_content" class="inner">
         <p>Rapidcloud.io provides Java developers with turnkey application delivery services to the cloud. </p>
 
