--- a/network.html
+++ b/network.html
@@ -20,6 +20,11 @@
           <h2 id="project_tagline">Networks</h2>
         </header>
     </div>
+	
+	<nav class="inner">
+		<a href="/">Overview</a> | 
+		<a href="/network.html">Networks</a>
+	</nav>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
