--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<nav class="inner">
 		<a href="/">Overview</a> | 
-		<a href="/network.html">Networks</a>
+		<a href="/networks.html">Networks</a>
 	</nav>
 	
 	<section id="main_content" class="inner">
