--- a/networks.html
+++ b/networks.html
@@ -21,14 +21,14 @@
         </header>
     </div>
 	
-	<nav class="inner">
-		<a href="/">Overview</a> | 
-		<a href="/network.html">Networks</a>
-	</nav>
-
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+		<nav class="inner">
+			<a href="/">Overview</a> | 
+			<a href="/networks.html">Networks</a>
+		</nav>
+
+		<section id="main_content" class="inner">
         <p>Networks allow you to share servers across servers automatically, manage firewall/across rules across servers and define one set of environment variables for multiple servers</p>
 
 <h3>
