--- a/networks.html
+++ b/networks.html
@@ -52,10 +52,10 @@ When a server is joined to a network, rapidcloud automatically opens the ports t
 <p>
 	Rapidcloud allows you to select one of the MySQL instances on a network as the network DB. Once this is down, the network connection informatin will be publishes to the network as environment variables.
 	<ul>
-		<li>NET_DB_NAME=name<li>
-		<li>NET_DB_USER=login username<li>
-		<li>NET_DB_PASSWORD=login password<li>
-		<li>NET_DB_URL=jdbc url to the database<li>
+		<li>NET_DB_NAME=name</li>
+		<li>NET_DB_USER=login username</li>
+		<li>NET_DB_PASSWORD=login password</li>
+		<li>NET_DB_URL=jdbc url to the database</li>
 	</ul>
 </p>
 
