--- a/networks.html
+++ b/networks.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Documentation</title>
+    <title>RAPIDCLOUD.IO Documentation</title>
   </head>
 
   <body>
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">Documentation</h1>
+          <h1 id="project_title">RAPIDCLOUD.IO Documentation</h1>
           <h2 id="project_tagline">Networks</h2>
         </header>
     </div>
