--- a/networks.html
+++ b/networks.html
@@ -29,45 +29,43 @@
 		</nav>
 
 		<section id="main_content" class="inner">
-        <p>Networks allow you to share servers across servers automatically, manage firewall/across rules across servers and define one set of environment variables for multiple servers</p>
+			<p>Networks allow you to share servers across servers automatically, manage firewall/across rules across servers and define one set of environment variables for multiple servers</p>
 
-<h3>
-<a name="network-services" class="anchor" href="#network-services"><span class="octicon octicon-link"></span></a>Network Services</h3>
+			<h3>
+			<a name="network-services" class="anchor" href="#network-services"><span class="octicon octicon-link"></span></a>Network Services</h3>
 
-<p>
-Rapidcloud has three network friendly services, Memcached, Redis and MySQL. For an unnetworked server, access to those services is blocked either by iptables or AWS security groups. Only permitting access from the local machine. 
-</p>
-<p>
-When a server is joined to a network, rapidcloud automatically opens the ports to any installed network services up to other members of the network.
-</p>
-<p>
-	If there a Redis or Memcache servers in a network their IP addresses are published as environment variables to all members of the network.
-	<ul>
-		<li>NET_REDIS_SERVERS=ipAddress1,ipAddress2</li>
-		<li>NET_MEMCACHE_SERVERS=ipAddress1,ipAddress2</li>
-	</ul>
-</p>
+			<p>
+			Rapidcloud has three network friendly services, Memcached, Redis and MySQL. For an unnetworked server, access to those services is blocked either by iptables or AWS security groups. Only permitting access from the local machine. 
+			</p>
+			<p>
+			When a server is joined to a network, rapidcloud automatically opens the ports to any installed network services up to other members of the network.
+			</p>
+			<p>
+				If there a Redis or Memcache servers in a network their IP addresses are published as environment variables to all members of the network.
+				<ul>
+					<li>NET_REDIS_SERVERS=ipAddress1,ipAddress2</li>
+					<li>NET_MEMCACHE_SERVERS=ipAddress1,ipAddress2</li>
+				</ul>
+			</p>
 
-<h3><a name="network-db" class="anchor" href="#network-db"><span class="octicon octicon-link"></span></a>Network DB</h3>
-<p>
-	Rapidcloud allows you to select one of the MySQL instances on a network as the network DB. Once this is down, the network connection informatin will be publishes to the network as environment variables.
-	<ul>
-		<li>NET_DB_NAME=name</li>
-		<li>NET_DB_USER=login username</li>
-		<li>NET_DB_PASSWORD=login password</li>
-		<li>NET_DB_URL=jdbc url to the database</li>
-	</ul>
-</p>
-
+			<h3><a name="network-db" class="anchor" href="#network-db"><span class="octicon octicon-link"></span></a>Network DB</h3>
+			<p>
+				Rapidcloud allows you to select one of the MySQL instances on a network as the network DB. Once this is down, the network connection informatin will be publishes to the network as environment variables.
+				<ul>
+					<li>NET_DB_NAME=name</li>
+					<li>NET_DB_USER=login username</li>
+					<li>NET_DB_PASSWORD=login password</li>
+					<li>NET_DB_URL=jdbc url to the database</li>
+				</ul>
+			</p>
+		</section>
+	</div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
       </footer>
     </div>
-
-    
-
   </body>
 </html>
 
