--- a/networks.html
+++ b/networks.html
@@ -16,7 +16,7 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">RAPIDCLOUD.IO Documentation</h1>
+          <h1 id="project_title">Rapidcloud.io Documentation</h1>
           <h2 id="project_tagline">Networks</h2>
         </header>
     </div>
