Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section id="main_content" class="inner">
         <p>Rapidcloud.io provides Java developers with turnkey application delivery services to the cloud. </p>
 
-<p><a href="#general-overview">General Overview</a>
+<p><a href="#general-overview">General Overview</a> | 
 <a href="#networks">Networks</a></p>
 
 <h1>
