--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <h3>
 <a name="network-services" class="anchor" href="#network-services"><span class="octicon octicon-link"></span></a>Network Services</h3>
 
-<p>Rapidcloud has three network friendly services, Memcached, Redis and MySQL. For an unnetworked server, access to those services is blocked either by iptables or AWS security groups. Only permitting access from the local machine. </p>
+<p>Rapidcloud has three network friendly services, Memcached, Redis and MySQL. For an unnetworked server, access to those services is blocked either by iptables or AWS security groups, only permitting access from the local machine. </p>
 
 <p>When a server is joined to a network, rapidcloud automatically opens the ports to any installed network services up to other members of the network.</p>
 
@@ -113,7 +113,7 @@
 </ol><h3>
 <a name="network-database" class="anchor" href="#network-database"><span class="octicon octicon-link"></span></a>Network Database</h3>
 
-<p>Rapidcloud allows you to select one of the MySQL instances on a network as the network DB. Once this is down, the network connection informatin will be publishes to the network as environment variables.</p>
+<p>Rapidcloud allows you to select one of the MySQL instances on a network as the network DB. Once this is done, the database connection information will be published to all members of the network as environment variables.</p>
 
 <ol>
 <li>NET_DB_NAME=name</li>
