--- a/index.html
+++ b/index.html
@@ -120,7 +120,18 @@
 <li>NET_DB_USER=login username</li>
 <li>NET_DB_PASSWORD=login password</li>
 <li>NET_DB_URL=jdbc url to the database</li>
-</ol>
+</ol><h1>
+<a name="server-setup" class="anchor" href="#server-setup"><span class="octicon octicon-link"></span></a>Server Setup</h1>
+
+<h3>
+<a name="application" class="anchor" href="#application"><span class="octicon octicon-link"></span></a>Application</h3>
+
+<p>Tomcat is located in
+<code>/opt/tomcat/</code></p>
+
+<p>It is separated into a home and base for each instance.
+<code>CATALINA_HOME=/opt/tomcat</code>
+<code>CATALINA_BASE=/opt/tomcat/instances/(8080|8081)</code></p>
       </section>
     </div>
 
