Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <p>Rapidcloud.io provides Java developers with turnkey application delivery services to the cloud. </p>
 
 <p><a href="#general-overview">General Overview</a> | 
-<a href="#networks">Networks</a></p>
+<a href="#networks">Networks</a> | 
+<a href="#server_setup">Server Setup</a> </p>
 
 <h1>
 <a name="general-overview" class="anchor" href="#general-overview"><span class="octicon octicon-link"></span></a>General Overview</h1>
