--- a/index.html
+++ b/index.html
@@ -190,6 +190,11 @@
 
 <ul>
 <li><code>sudo supervisorctl restart &lt;service_name&gt;</code></li>
+</ul><p>To load a new config file or apply changes made to one</p>
+
+<ul>
+<li><code>sudo supervisorctl reread</code></li>
+<li><code>sudo supervisorctl reload</code></li>
 </ul><p>Example:</p>
 
 <ul>
