--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
 <h3>
 <a name="initial-setup" class="anchor" href="#initial-setup"><span class="octicon octicon-link"></span></a>Initial Setup</h3>
 
-<p>Use rapidcloud by providing access keys to your AWS, Digital Ocean or Rackspace account and authorizing rapidcloud to read your Github or Bitbucket repositories. Once connected you can use rapidcloud to provision and configure Java webapplication servers in any connected cloud.</p>
+<p>Get started with rapidcloud by providing access keys to your AWS, Digital Ocean or Rackspace account and authorizing rapidcloud to read your Github or Bitbucket repositories. Once authorized for a cloud service provider can use rapidcloud to provision and configure Java web application servers.</p>
 
 <h3>
 <a name="source-code" class="anchor" href="#source-code"><span class="octicon octicon-link"></span></a>Source Code</h3>
 
-<p>Once the server is setup, use rapidcloud to clone your application respository (from bitbucket or github) onto your cloud server. Rapidcloud does not keep a copy of your source code on its servers. </p>
+<p>After the server is provisioned and setup, you'll need to clone your application repository (from bitbucket or github) onto your cloud server. (Note: Rapidcloud does not keep a copy of your source code on its servers).</p>
 
 <h3>
 <a name="compile-and-package" class="anchor" href="#compile-and-package"><span class="octicon octicon-link"></span></a>Compile and Package</h3>
 
-<p>When your are ready to build and deploy your application rapidcloud will connect to your server and execute the build commands.</p>
+<p>After cloning your application, you will be ready to build and deploy it. Rapidcloud does it's work by connecting to your server and executing the build commands, then are run from /home/rc-build/repository.</p>
 
 <h4>
 <a name="play" class="anchor" href="#play"><span class="octicon octicon-link"></span></a>Play</h4>
