Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <h3>
 <a name="compile-and-package" class="anchor" href="#compile-and-package"><span class="octicon octicon-link"></span></a>Compile and Package</h3>
 
-<p>After cloning your application, you will be ready to build and deploy it. Rapidcloud does it's work by connecting to your server and executing the build commands, then are run from /home/rc-build/repository.</p>
+<p>After cloning your application, you will be ready to build and deploy it. Rapidcloud does it's work by connecting to your server and executing the build commands, they are run from /home/rc-build/repository.</p>
 
 <h4>
 <a name="play" class="anchor" href="#play"><span class="octicon octicon-link"></span></a>Play</h4>
