Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -216,30 +216,17 @@
 
 <p>Any framework which uses maven to build a war file should work with rapidcloud. TO get spring-boot to generate a war file you can modify your pom.xml as follows:</p>
 
-<p><code>...</code>
-    <code>&lt;dependency&gt;</code>
-        <code>&lt;groupId&gt;org.springframework.boot&lt;/groupId&gt;</code>
-        <code>&lt;artifactId&gt;spring-boot-starter-web&lt;/artifactId&gt;</code>
-        <code>&lt;exclusions&gt;</code>
-            <code>&lt;exclusion&gt;</code>
-                <code>&lt;groupId&gt;org.springframework.boot&lt;/groupId&gt;</code>
-                <code>&lt;artifactId&gt;spring-boot-starter-tomcat&lt;/artifactId&gt;</code>
-            <code>&lt;/exclusion&gt;</code>
-        <code>&lt;/exclusions&gt;</code>
-    <code>&lt;/dependency&gt;</code>
-<code>...</code>
-<code>...</code>
-        <code>&lt;!-- this defaults a profile which constructs a war file, use this profile with rapidcloud---&gt;</code>
-         <code>&lt;profile&gt;</code>
-            <code>&lt;id&gt;webapp&lt;/id&gt;</code>
-            <code>&lt;activation&gt;</code>
-                <code>&lt;activeByDefault&gt;false&lt;/activeByDefault&gt;</code>
-            <code>&lt;/activation&gt;</code>
-            <code>&lt;properties&gt;</code>
-                <code>&lt;packaging.type&gt;war&lt;/packaging.type&gt;</code>
-            <code>&lt;/properties&gt;</code>
-         <code>&lt;/profile&gt;</code>
-<code>....</code></p>
+<pre>
+    ...
+
+    org.springframework.bootspring-boot-starter-weborg.springframework.bootspring-boot-starter-tomcat
+
+    ...
+    
+     webappfalsewar
+    
+    ...
+</pre>
       </section>
     </div>
 
