Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -214,7 +214,12 @@
 <h3>
 <a name="support-for-war-files" class="anchor" href="#support-for-war-files"><span class="octicon octicon-link"></span></a>Support for war files</h3>
 
-<p>Any framework which uses maven to build a war file should work with rapidcloud. TO get spring-boot to generate a war file you can modify your pom.xml as follows:</p>
+<p>Any framework which uses maven to build a war file should work with rapidcloud. </p>
+
+<h3>
+<a name="spring-boot" class="anchor" href="#spring-boot"><span class="octicon octicon-link"></span></a>Spring-boot</h3>
+
+<p>To get spring-boot to generate a war file you can modify your pom.xml as follows:</p>
 
 <pre>
     ...
