Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -212,12 +212,17 @@
 <a name="frameworks" class="anchor" href="#frameworks"><span class="octicon octicon-link"></span></a>Frameworks</h1>
 
 <h3>
+<a name="play-framework-2" class="anchor" href="#play-framework-2"><span class="octicon octicon-link"></span></a>Play! Framework 2</h3>
+
+<p>Rapidcloud supports Play Framework 2 naively using SBT to build the project.</p>
+
+<h3>
 <a name="support-for-war-files" class="anchor" href="#support-for-war-files"><span class="octicon octicon-link"></span></a>Support for war files</h3>
 
 <p>Any framework which uses maven to build a war file should work with rapidcloud. </p>
 
 <h3>
-<a name="spring-boot" class="anchor" href="#spring-boot"><span class="octicon octicon-link"></span></a>Spring-boot</h3>
+<a name="spring-boot" class="anchor" href="#spring-boot"><span class="octicon octicon-link"></span></a>Spring Boot</h3>
 
 <p>To get spring-boot to generate a war file you can modify your pom.xml as follows:</p>
 
