Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -92,7 +92,17 @@
 
 <p>For play projects rapidcloud will copy the war file in target/ to /opt/tomcat/instances/(8080|8081)/webapps/ and start tomcat</p>
 
-<h2>
+<h4>
+<a name="mysql" class="anchor" href="#mysql"><span class="octicon octicon-link"></span></a>MySQL</h4>
+
+<p>If you choose to install MySQL on your server, the database credentials are automatically provided as environment variables to your application. The variables are:</p>
+
+<ul>
+<li>DB_NAME=local database name</li>
+<li>DB_USER=local database login username</li>
+<li>DB_PASSWORD=local database login password</li>
+<li>DB_URL=local database jdbc url </li>
+</ul><h2>
 <a name="networks" class="anchor" href="#networks"><span class="octicon octicon-link"></span></a>Networks</h2>
 
 <h3>
