--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 <li>Signal Nginx to send all new requests to the new application instance</li>
 <li>Wait 1 minute for existing requests on the old instance to cooldown</li>
 <li>Shutdown the old instance</li>
-</ol><h4>
+</ol>
+
+<h4>
 <a name="play-1" class="anchor" href="#play-1"><span class="octicon octicon-link"></span></a>Play</h4>
 
 <p>For play projects rapidcloud will copy the files in <code>target/universal/stage/</code> to <code>/opt/play/(8000|8001)/</code> and execute the cmd in /opt/play/(8000|8001)/bin to start the application. Command line arguments can be provided on the server configuration page. </p>
@@ -102,7 +104,9 @@
 <li>DB_USER=local database login username</li>
 <li>DB_PASSWORD=local database login password</li>
 <li>DB_URL=local database jdbc url </li>
-</ul><h2>
+</ul>
+
+<h2>
 <a name="networks" class="anchor" href="#networks"><span class="octicon octicon-link"></span></a>Networks</h2>
 
 <h3>
@@ -122,7 +126,9 @@
 <ul>
 <li>NET_REDIS_SERVERS=ipAddress1,ipAddress2</li>
 <li>NET_MEMCACHE_SERVERS=ipAddress1,ipAddress2</li>
-</ul><h3>
+</ul>
+
+<h3>
 <a name="network-database" class="anchor" href="#network-database"><span class="octicon octicon-link"></span></a>Network Database</h3>
 
 <p>Rapidcloud allows you to select one of the MySQL instances on a network as the network DB. Once this is done, the database connection information will be published to all members of the network as environment variables.</p>
@@ -132,8 +138,15 @@
 <li>NET_DB_USER=login username</li>
 <li>NET_DB_PASSWORD=login password</li>
 <li>NET_DB_URL=jdbc url to the database</li>
-</ul><h1>
+</ul>
+
+<h1>
 <a name="server-setup" class="anchor" href="#server-setup"><span class="octicon octicon-link"></span></a>Server Setup</h1>
+
+<h3>
+<a name="ssh" class="anchor" href="#ssh"><span class="octicon octicon-link"></span></a>SSH</h3>
+
+<p>You can login into your server by uploading a public ssh key from your server's ssh key page. Once that's done, you'll be able to login as rc-user (ssh rc-user@). To execute a command as sudo you'll have to use the sudo password which was emailed to you when your server was provisioned.</p>
 
 <h3>
 <a name="application" class="anchor" href="#application"><span class="octicon octicon-link"></span></a>Application</h3>
@@ -149,19 +162,25 @@
 <ul>
 <li>/opt/play/9000</li>
 <li>/opt/play/9001</li>
-</ul><p>Each instance has its own log directory</p>
+</ul>
+
+<p>Each instance has its own log directory</p>
 
 <ul>
 <li>/opt/play/9000/logs</li>
 <li>/opt/play/9001/logs</li>
-</ul><p>Standard error and standard out written to </p>
+</ul>
+
+<p>Standard error and standard out written to </p>
 
 <ul>
 <li>/var/log/play/play_9000.err.log</li>
 <li>/var/log/play/play_9000.out.log</li>
 <li>/var/log/play/play_9001.err.log</li>
 <li>/var/log/play/play_9001.out.log</li>
-</ul><h4>
+</ul>
+
+<h4>
 <a name="tomcat-1" class="anchor" href="#tomcat-1"><span class="octicon octicon-link"></span></a>Tomcat</h4>
 
 <p>Tomcat is located in
@@ -172,19 +191,25 @@
 <ul>
 <li>CATALINA_HOME=/opt/tomcat</li>
 <li>CATALINA_BASE=/opt/tomcat/instances/(8080|8081)</li>
-</ul><p>Each instance has its own log directory</p>
+</ul>
+
+<p>Each instance has its own log directory</p>
 
 <ul>
 <li>/opt/tomcat/instances/8080/log/</li>
 <li>/opt/tomcat/instances/8081/log/</li>
-</ul><p>Standard error and standard out are written to</p>
+</ul>
+
+<p>Standard error and standard out are written to</p>
 
 <ul>
 <li>/var/log/tomcat/tomcat_8080.err.log</li>
 <li>/var/log/tomcat/tomcat_8080.out.log</li>
 <li>/var/log/tomcat/tomcat_8081.err.log</li>
 <li>/var/log/tomcat/tomcat_8081.out.log</li>
-</ul><h3>
+</ul>
+
+<h3>
 <a name="supervisor" class="anchor" href="#supervisor"><span class="octicon octicon-link"></span></a>Supervisor</h3>
 
 <p>Each application is managed by supervisord to insure that it stays running by restarting it automatically if it fails unexpectedly and providing an easy way to manage its launch configuration.</p>
@@ -193,32 +218,44 @@
 
 <ul>
 <li><code>/etc/supervisor/conf.d</code></li>
-</ul><p>To view the status of supervisor services type</p>
+</ul>
+
+<p>To view the status of supervisor services type</p>
 
 <ul>
 <li><code>sudo supervisorctl status</code></li>
-</ul><p>To restart a service type</p>
+</ul>
+
+<p>To restart a service type</p>
 
 <ul>
 <li><code>sudo supervisorctl restart &lt;service_name&gt;</code></li>
-</ul><p>Example:</p>
+</ul>
+
+<p>Example:</p>
 
 <ul>
 <li><code>sudo supervisorctl restart tomcat_8080</code></li>
 <li><code>sudo supervisorctl restart play_9000</code></li>
-</ul><p>To load a new config file or apply changes made to one</p>
+</ul>
+
+<p>To load a new config file or apply changes made to one</p>
 
 <ul>
 <li><code>sudo supervisorctl reread</code></li>
 <li><code>sudo supervisorctl reload</code></li>
-</ul><p>Supervisord also manages</p>
+</ul>
+
+<p>Supervisord also manages</p>
 
 <ul>
 <li>nginx - nginx.supervisor.conf</li>
 <li>memcached - memcached.supervisor.conf</li>
 <li>reds - redis.supervisor.conf</li>
 <li>remote_syslog (papertail) - remote_syslog.supervisor.conf</li>
-</ul><h1>
+</ul>
+
+<h1>
 <a name="frameworks" class="anchor" href="#frameworks"><span class="octicon octicon-link"></span></a>Frameworks</h1>
 
 <h3>
