Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 <p><a href="#general-overview">General Overview</a> | 
 <a href="#networks">Networks</a> | 
 <a href="#server-setup">Server Setup</a>  |
-<a href="#frameworks">Framework</a> </p>
+<a href="#frameworks">Framework</a>  |
+<a href="#quickstart">Quickstart</a> </p>
 
 <h1>
 <a name="general-overview" class="anchor" href="#general-overview"><span class="octicon octicon-link"></span></a>General Overview</h1>
@@ -300,6 +301,34 @@
 
 ...
 </code></pre>
+
+<h1>
+<a name="frameworks-1" class="anchor" href="#frameworks-1"><span class="octicon octicon-link"></span></a>Frameworks</h1>
+
+<h2>
+<a name="spring-boot-1" class="anchor" href="#spring-boot-1"><span class="octicon octicon-link"></span></a>Spring Boot</h2>
+
+<p>We have a quickstart springboot project available for forking on Github. Just go to <a href="https://github.com/rapidcloudio-docs/rapidcloudio-quickstart-springboot">https://github.com/rapidcloudio-docs/rapidcloudio-quickstart-springboot</a> and fork it into your own Github account. </p>
+
+<p>Once thats complete, make the following configuration changes:</p>
+
+<h3>
+<a name="from-the-repository-page" class="anchor" href="#from-the-repository-page"><span class="octicon octicon-link"></span></a>From the Repository Page</h3>
+
+<ol>
+<li>Source: GitHub</li>
+<li>Repository Name: rapidcloudio-quickstart-springboot</li>
+<li>Repository Branch: master</li>
+</ol>
+
+<h3>
+<a name="from-the-configure-page" class="anchor" href="#from-the-configure-page"><span class="octicon octicon-link"></span></a>From the Configure Page</h3>
+
+<ol>
+<li>Profiles: webapp</li>
+</ol>
+
+<p>After you've made those two configuration changes, click deploy now. </p>
       </section>
     </div>
 
