Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 <li>Profiles: webapp</li>
 </ol>
 
-<p>After you've made those two configuration changes, click deploy now. </p>
+<p>After you've made those two configuration changes, click deploy now. Once the deployment is done go ahead and view the hello world page, by navigating your browser to your server's IP address (view on the left side informational panel or the server's overview page)</p>
       </section>
     </div>
 
