Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 </code></pre>
 
 <h1>
-<a name="frameworks-1" class="anchor" href="#frameworks-1"><span class="octicon octicon-link"></span></a>Frameworks</h1>
+<a name="quickstart" class="anchor" href="#quickstart"><span class="octicon octicon-link"></span></a>Quickstart</h1>
 
 <h2>
 <a name="spring-boot-1" class="anchor" href="#spring-boot-1"><span class="octicon octicon-link"></span></a>Spring Boot</h2>
