Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
 <p>We have a quickstart springboot project available for forking on Github. Just go to <a href="https://github.com/rapidcloudio-docs/rapidcloudio-quickstart-springboot">https://github.com/rapidcloudio-docs/rapidcloudio-quickstart-springboot</a> and fork it into your own Github account. </p>
 
-<p>Once thats complete, make the following configuration changes:</p>
+<p>Once thats complete you can deploy the application to any of your servers. Once you've provisioned one, go ahead make the following configuration changes:</p>
 
 <h3>
 <a name="from-the-repository-page" class="anchor" href="#from-the-repository-page"><span class="octicon octicon-link"></span></a>From the Repository Page</h3>
