Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@ is emailed to you as part of your server setup. To access your database remotely
 
 <ul>
 <li>SSH Username: rc-user</li>
-<li>SSH Hostname: </li>
+<li>SSH Hostname: (IP Address of your instance)</li>
 <li>SSH Key File: The private key which matches the public key you upload to your instance (via ssh page)</li>
 <li>MySQL Hostnane: 127.0.0.1</li>
 <li>MySQL Server Port: 3306</li>
 <li>Username: rc-user</li>
-<li>Password: </li>
+<li>Password: (This password was sent to you via email when server was provisioned)</li>
 </ul>
 
 <h2>
