Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@ is emailed to you as part of your server setup. To access your database remotely
 
 <p>You can login into your server by uploading a public ssh key from your server's ssh key page. Once that's done, you'll be able to login as rc-user (ssh rc-user@). To execute a command as sudo you'll have to use the sudo password which was emailed to you when your server was provisioned.</p>
 
+<p>Please note, if you install MySQL there will be TWO separate rc-user accounts, one for ssh (and sudo) purposes and one for database administration. </p>
+
 <h3>
 <a name="application" class="anchor" href="#application"><span class="octicon octicon-link"></span></a>Application</h3>
 
