--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 
-	<h1 class="page-heading">Tutorials / Guides</h1>
+	<h1 class="page-heading">Tutorials</h1>
 	 
 	<div class="posts">
 		{% assign posts = (site.categories.walkthrough | sort: 'position') %}
